@@ -2,6 +2,8 @@
 
 * segway: more informative error on memory progression failure
 * segway: now works on LSF even when LSF_UNIT_FOR_LIMITS has been changed
+* segway: log/res_usage.tab becomes log/jobs.tab
+* segway: add jobid, jobname to jobs.tab
 * docs updates
 
 0.1.14:
